@@ -11,6 +11,10 @@ IDs. Ramona wanted to be able to drag the live term onto the obsolete term and
 see the menu items for adding a consider or replaced_by relation between the
 two same-named terms, and it wasn't showing those menu items.
 
+[ geneontology-Bugs-3147642 ] 'Select all' not working in Remove Redundant Links panel
+[ geneontology-Bugs-3517323 ] Remove Redundant Links Panel doesn't refresh when it should
+
+
 ==============================
 What's New in OBO-Edit v2.1.1-b7 (2/28/2012)
 ==============================
